--- a/Views/Account/Orders.cshtml
+++ b/Views/Account/Orders.cshtml
@@ -194,7 +194,7 @@
                     { "data": "createdAt", "name": "Submited", "autoWidth": true, "render": (data) => formatDateTime(data) },
                     {
                         "render": function (data, type, row) {
-                            return `<a href="/account/orders/detail/${row.id}" class="btn btn-sm btn-alt-secondary" >
+                            return `<a href="/account/orders/detail/${row.id}" class="btn btn-sm btn-success text-white" >
                                                           <i class="fa fa-fw fa-eye"></i>
                                                         </a>`;
                         }, "className": "text-center"
