--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -245,7 +245,7 @@
 													</div>
 												</div>
 											</div>
-											<div class="p-2">
+											<div id="list_comment" class="p-2">
 												@if (ViewBag.Reviews != null && ViewBag.Reviews.Count > 0)
 												{
 													foreach (var review in ViewBag.Reviews)
@@ -390,6 +390,7 @@
 
 @section Scripts {
 	<script src="~/js/product-detail.js"></script>
+	<script src="~/lib/signalr/dist/browser/signalr.js"></script>
 	<script>
 		$(document).ready(function () {
 			$("#form-review").validate({
@@ -417,8 +418,10 @@
 							Rating: overallRating
 						},
 						success: function (response) {
+							connection.invoke("SendComment", productId).catch(err => console.error(err));
+							var myModal = bootstrap.Modal.getOrCreateInstance(document.getElementById('modal-add-review'));
+							myModal.hide();
 							console.log(response);
-							location.reload();
 						},
 						error: function (error) {
 							console.error("Error in POST request", error);
@@ -426,6 +429,70 @@
 					});
 				}
 			});
+
+
+			const connection = new signalR.HubConnectionBuilder()
+				.withUrl("/commentHub")
+				.build();
+			
+
+			// Khi người dùng mở trang sản phẩm
+			connection.start().then(() => {
+				var productId = $("#product-id").val();
+				connection.invoke("JoinGroup", productId).catch(err => console.error(err));
+			}).catch(err => console.error(err));
+
+			// Lắng nghe sự kiện ReceiveComment từ server
+			connection.on("ReceiveComment", (comment) => {
+				const inputDateString = comment.commentCreatedAt;
+
+				// Tạo đối tượng Date từ chuỗi thời gian
+				const inputDate = new Date(inputDateString);
+
+				// Chuyển đổi sang định dạng mong muốn
+				const formattedDate = inputDate.toLocaleString('en-US', {
+					day: 'numeric',
+					month: 'numeric',
+					year: 'numeric',
+					hour: 'numeric',
+					minute: 'numeric',
+					second: 'numeric',
+					hour12: true
+				});
+				let rating = ``;
+
+				for (let i = 1; i <= comment.commentRating; i++) {
+					rating += '<i class="icon-star"></i>';
+				}
+
+				for (let i = 1; i <= (5 - comment.commentRating); i++) {
+					rating += '<i class="icon-star empty"></i>';
+				}
+
+				let commentHtml = `<div class="review_content">
+				<div class="clearfix add_bottom_10">
+					<span class="rating">
+						${rating}
+						<em>${comment.commentRating}/5.0</em>
+					</span>
+					<em>Published ${formattedDate}</em>
+				</div>
+				<div class="d-flex align-items-center">
+					<span style="font-size: 16px; font-weight: bold">${comment.commentName}</span>
+					<img style="width: 18px; height: 18px; margin-left: 10px; margin-right: 5px" src="/img/buy_product.webp" alt="Đã mua hàng"> Đã mua hàng
+				</div>
+				<p>${comment.commentText}</p>
+			</div>`;
+
+				$("#list_comment").prepend(commentHtml);
+				console.log('Comment new: ', comment);
+			});
+
+
+			window.addEventListener('beforeunload', function (event) {
+				connection.invoke("LeaveGroup", $("#product-id").val()).catch(err => console.error(err));
+			});
+
 		});
 	</script>
 }
