--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -140,7 +140,7 @@
 								<div class="container">
 								<div class="row mb-4">
 									<div class="col-lg-4">
-										<div class="p-4 border rounded bg-white">
+										<div id="detail_rating" class="p-4 border rounded bg-white">
 											<div class="text-center">
 												<div class="fs-3">
 													<strong class="text-warning">@ViewBag.AverageRating</strong>/<span>5</span>
@@ -420,8 +420,8 @@
 						success: function (response) {
 							connection.invoke("SendComment", productId).catch(err => console.error(err));
 							var myModal = bootstrap.Modal.getOrCreateInstance(document.getElementById('modal-add-review'));
+							
 							myModal.hide();
-							console.log(response);
 						},
 						error: function (error) {
 							console.error("Error in POST request", error);
@@ -430,26 +430,102 @@
 				}
 			});
 
+			const getDetailRating = (productId) => {
+				$.ajax({
+					type: "GET",
+					url: `/Product/getDetailStar/${productId}`,
+					success: function (data) {
+						console.log('data', data);
+						let ratingHtml = ` <div class="text-center">
+		  <div class="fs-3">
+			<strong class="text-warning">${data.averageRating}</strong>/ <span>5</span>
+		  </div>
+		  <h6 class="text-center">Có ${data.countView} lượt đánh giá</h6>
+		</div>
+		<div class="d-flex justify-content-between align-items-center">
+		  <span class="rating me-3">
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star"></i>
+			<i class="icon-star"></i>
+			<i class="icon-star"></i>
+			<i class="icon-star"></i>
+		  </span>
+		  <div class="progress flex-grow-1 mb-2">
+			<div class="progress-bar" role="progressbar" style="width: calc(${data.reviewStats.percentOneStar})" aria-valuenow="${data.reviewStats.oneStar}" aria-valuemin="0" aria-valuemax="${data.totalRating}"> ${data.reviewStats.percentOneStar} </div>
+		  </div>
+		</div>
+		<div class="d-flex justify-content-between align-items-center">
+		  <span class="rating me-3">
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star"></i>
+			<i class="icon-star"></i>
+			<i class="icon-star"></i>
+		  </span>
+		  <div class="progress flex-grow-1 mb-2">
+			<div class="progress-bar" role="progressbar" style="width: calc(${data.reviewStats.percentTwoStar})" aria-valuenow="${data.reviewStats.twoStar}" aria-valuemin="0" aria-valuemax="${data.totalRating}"> ${data.reviewStats.percentTwoStar} </div>
+		  </div>
+		</div>
+		<div class="d-flex justify-content-between align-items-center">
+		  <span class="rating me-3">
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star"></i>
+			<i class="icon-star"></i>
+		  </span>
+		  <div class="progress flex-grow-1 mb-2">
+			<div class="progress-bar" role="progressbar" style="width: calc(${data.reviewStats.percentThreeStar})" aria-valuenow="${data.reviewStats.threeStar}" aria-valuemin="0" aria-valuemax="${data.totalRating}"> ${data.reviewStats.percentThreeStar} </div>
+		  </div>
+		</div>
+		<div class="d-flex justify-content-between align-items-center">
+		  <span class="rating me-3">
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star"></i>
+		  </span>
+		  <div class="progress flex-grow-1 mb-2">
+			<div class="progress-bar" role="progressbar" style="width: calc(${data.reviewStats.percentFourStar})" aria-valuenow="${data.reviewStats.fourStar}" aria-valuemin="0" aria-valuemax="${data.totalRating}"> ${data.reviewStats.percentFourStar} </div>
+		  </div>
+		</div>
+		<div class="d-flex justify-content-between align-items-center">
+		  <span class="rating me-3">
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star text-warning"></i>
+			<i class="icon-star"></i>
+		  </span>
+		  <div class="progress flex-grow-1 mb-2">
+			<div class="progress-bar" role="progressbar" style="width: calc(${data.reviewStats.percentFiveStar})" aria-valuenow="${data.reviewStats.fiveStar}" aria-valuemin="0" aria-valuemax="${data.totalRating}"> ${data.reviewStats.percentFiveStar} </div>
+		  </div>
+		</div>`
+						$("#detail_rating").html(ratingHtml);
+					},
+					error: function (error) {
+						console.error("Error in Get request", error);
+					}
+				}) };
+
 
 			const connection = new signalR.HubConnectionBuilder()
 				.withUrl("/commentHub")
 				.build();
-			
 
-			// Khi người dùng mở trang sản phẩm
 			connection.start().then(() => {
 				var productId = $("#product-id").val();
 				connection.invoke("JoinGroup", productId).catch(err => console.error(err));
 			}).catch(err => console.error(err));
 
-			// Lắng nghe sự kiện ReceiveComment từ server
 			connection.on("ReceiveComment", (comment) => {
+				var productId = $("#product-id").val();
+				getDetailRating(productId);
 				const inputDateString = comment.commentCreatedAt;
 
-				// Tạo đối tượng Date từ chuỗi thời gian
 				const inputDate = new Date(inputDateString);
 
-				// Chuyển đổi sang định dạng mong muốn
 				const formattedDate = inputDate.toLocaleString('en-US', {
 					day: 'numeric',
 					month: 'numeric',
@@ -475,7 +551,7 @@
 						${rating}
 						<em>${comment.commentRating}/5.0</em>
 					</span>
-					<em>Published ${formattedDate}</em>
+							<em>Published ${formattedDate}</em>
 				</div>
 				<div class="d-flex align-items-center">
 					<span style="font-size: 16px; font-weight: bold">${comment.commentName}</span>
@@ -485,12 +561,6 @@
 			</div>`;
 
 				$("#list_comment").prepend(commentHtml);
-				console.log('Comment new: ', comment);
-			});
-
-
-			window.addEventListener('beforeunload', function (event) {
-				connection.invoke("LeaveGroup", $("#product-id").val()).catch(err => console.error(err));
 			});
 
 		});
