--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ShoeShop.Models.Contact
+@{
 	ViewData["Title"] = "Contact";
 }
 
@@ -51,21 +52,24 @@
 			<h4 class="pb-3">Drop Us a Line</h4>
 			<div class="row">
 				<div class="col-lg-4 col-md-6 add_bottom_25">
-				<form asp-controller="Contact" asp-action="SubmitContact">
-					<div class="form-group">
-						<input class="form-control" type="text" placeholder="Name *" name="name">
-					</div>
-					<div class="form-group">
-						<input class="form-control" type="email" placeholder="Email *" name="email">
-					</div>
-					<div class="form-group">
-						<textarea class="form-control" style="height: 150px;"
-								  placeholder="Message *" name="message"></textarea>
-					</div>
-					<div class="form-group">
-						<input class="btn_1 full-width" type="submit" value="Submit">
-					</div>
-				</form>
+					<form asp-controller="Contact" asp-action="SubmitContact" method="post">
+						<div class="form-group">
+							<input class="form-control" type="text" placeholder="Name *" asp-for="Name">
+							<span asp-validation-for="Name"></span>
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="email" placeholder="Email *" asp-for="Email">
+							<span asp-validation-for="Email"></span>
+						</div>
+						<div class="form-group">
+							<textarea class="form-control" style="height: 150px;" placeholder="Message *" asp-for="Message"></textarea>
+							<span asp-validation-for="Message"></span>
+						</div>
+						<div class="form-group">
+							<input class="btn_1 full-width" type="submit" value="Submit">
+						</div>
+					</form>
+
 				</div>
 				<div class="col-lg-8 col-md-6 add_bottom_25">
 					<iframe class="map_contact"
