delete seeder product 5

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -102,14 +102,8 @@
 									<a href="#" class="open_close" id="close_in"><i class="ti-close"></i></a>
 								</div>
 								<ul>
-									<li class="submenu">
-										<a href="javascript:void(0);" class="show-submenu">Home</a>
-										<ul>
-											<li><a href="index.html">Slider</a></li>
-											<li><a href="index-2.html">Video Background</a></li>
-											<li><a href="index-3.html">Vertical Slider</a></li>
-											<li><a href="index-4.html">GDPR Cookie Bar</a></li>
-										</ul>
+									<li>
+										<a asp-controller="Home" asp-action="Index">Home</a>
 									</li>
 									<li>
 										<a asp-controller="Product" asp-action="Index">Products</a>
