--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -43,6 +43,7 @@
 	                    <h1>@product.Name</h1>
 	                    <span class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i><em>4 reviews</em></span>
 	                    <div class="prod_options mt-2">
+						<p>Tình trạng: <span class="fw-semibold text-primary">Còn hàng (<span class="color-stock">0</span>)</span></p>
 	                        <div class="row mb-2 variant-container">
 	                        </div>
 	                        <div class="row mb-2">
