Update check quantity

--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -85,7 +85,7 @@
                                 <th scope="col">#</th>
                                 <th scope="col">Variants</th>
                                 <th scope="col">Stock</th>
-                                <th scope="col">Status</th>
+                                @* <th scope="col">Status</th> *@
                             </tr>
                         </thead>
                         <tbody id="table-variant">
