--- a/Views/Blog/Detail.cshtml
+++ b/Views/Blog/Detail.cshtml
@@ -41,13 +41,8 @@
 			</div>
 			<!-- /col -->
 
-			<aside class="col-lg-3">
-				<div class="widget search_blog">
-					<div class="form-group">
-						<input type="text" name="search" id="search" class="form-control" placeholder="Search..">
-						<button type="submit"><i class="ti-search"></i></button>
-					</div>
-				</div>
+			<aside class="col-lg-3" id="suggest">
+				
 				<!-- /widget -->
 			</aside>
 			<!-- /aside -->
