--- a/Views/Blog/Index.cshtml
+++ b/Views/Blog/Index.cshtml
@@ -100,7 +100,7 @@
 		var totalPage = null;
 		document.addEventListener("DOMContentLoaded", function () {
 			const topicsCheckboxes = document.querySelectorAll("input[name=topics]");
-			const inputSearch = document.getElementById("search-input");
+			const inputSearch = document.getElementById("search_blog");
 
 
 			// Add a flag to prevent infinite loop
