--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -192,68 +192,27 @@
 		<div class="main_title">
 			<h2>Latest news</h2>
 			<span>Blog</span>
-			<p>Cum doctus civibus efficiantur in imperdiet deterruisset</p>
+			<p>Exploring the Wonders of Fashion: Insights, Tips, and Inspiration</p>
 		</div>
 		<div class="row">
-			<div class="col-lg-6">
-				<a class="box_news" href="blog.html">
-					<figure>
-						<img src="img/blog-thumb-placeholder.jpg" data-src="img/blog-thumb-1.jpg" alt="" width="400" height="266" class="lazy">
-						<figcaption><strong>28</strong>Dec</figcaption>
-					</figure>
-					<ul>
-						<li>by Mark Twain</li>
-						<li>20.11.2017</li>
-					</ul>
-					<h4>Pri oportere scribentur eu</h4>
-					<p>Cu eum alia elit, usu in eius appareat, deleniti sapientem honestatis eos ex. In ius esse ullum vidisse....</p>
-				</a>
-			</div>
-			<!-- /box_news -->
-			<div class="col-lg-6">
-				<a class="box_news" href="blog.html">
-					<figure>
-						<img src="img/blog-thumb-placeholder.jpg" data-src="img/blog-thumb-2.jpg" alt="" width="400" height="266" class="lazy">
-						<figcaption><strong>28</strong>Dec</figcaption>
-					</figure>
-					<ul>
-						<li>By Jhon Doe</li>
-						<li>20.11.2017</li>
-					</ul>
-					<h4>Duo eius postea suscipit ad</h4>
-					<p>Cu eum alia elit, usu in eius appareat, deleniti sapientem honestatis eos ex. In ius esse ullum vidisse....</p>
-				</a>
-			</div>
-			<!-- /box_news -->
-			<div class="col-lg-6">
-				<a class="box_news" href="blog.html">
-					<figure>
-						<img src="img/blog-thumb-placeholder.jpg" data-src="img/blog-thumb-3.jpg" alt="" width="400" height="266" class="lazy">
-						<figcaption><strong>28</strong>Dec</figcaption>
-					</figure>
-					<ul>
-						<li>By Luca Robinson</li>
-						<li>20.11.2017</li>
-					</ul>
-					<h4>Elitr mandamus cu has</h4>
-					<p>Cu eum alia elit, usu in eius appareat, deleniti sapientem honestatis eos ex. In ius esse ullum vidisse....</p>
-				</a>
-			</div>
-			<!-- /box_news -->
-			<div class="col-lg-6">
-				<a class="box_news" href="blog.html">
-					<figure>
-						<img src="img/blog-thumb-placeholder.jpg" data-src="img/blog-thumb-4.jpg" alt="" width="400" height="266" class="lazy">
-						<figcaption><strong>28</strong>Dec</figcaption>
-					</figure>
-					<ul>
-						<li>By Paula Rodrigez</li>
-						<li>20.11.2017</li>
-					</ul>
-					<h4>Id est adhuc ignota delenit</h4>
-					<p>Cu eum alia elit, usu in eius appareat, deleniti sapientem honestatis eos ex. In ius esse ullum vidisse....</p>
-				</a>
-			</div>
+			@foreach(var item in ViewBag.SuggestPost)
+			{
+				<div class="col-lg-6">
+					<a class="box_news" href="/blogs/@item.Slug">
+						<figure>
+							<img src="~/img/blogs/@item.Thumbnail.Name" alt="" width="400" height="266" class="lazy">
+							<figcaption><strong>@item.CreatedAt.ToString("dd")</strong>@item.CreatedAt.ToString("MMM")</figcaption>
+						</figure>
+						<ul>
+							<li>By @item.User.FullName</li>
+							<li>@item.CreatedAt.ToString("dd/MM/yyyy")</li>
+						</ul>
+						<h4>@item.Name</h4>
+						<p >@item.Description</p>
+					</a>
+				</div>
+
+			}
 			<!-- /box_news -->
 		</div>
 		<!-- /row -->
